force-app/main/default/objects/Commission__c/fields/Deal_Value_for_Report__c.field-meta.xml
<CustomField>
    <fullName>Deal_Value_for_Report__c</fullName>
    <formula>IF(TEXT(Payment_Number__c) = &apos;Payment 01&apos;,  Opportunity__r.Deal_Value__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Value for Report</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>