force-app/main/default/objects/Commission__c/fields/Est_Act__c.field-meta.xml
<CustomField>
    <fullName>Est_Act__c</fullName>
    <label>Date Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Estimated</fullName>
            </value>
            <value>
                <fullName>Deposit Date</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>