force-app/main/default/objects/Commission__c/fields/File_Location__c.field-meta.xml
<CustomField>
    <fullName>File_Location__c</fullName>
    <formula>IF( TEXT(Payment_Method__c) == &apos;Wire&apos;,&apos;N/A&apos;, HYPERLINK( File_Location_Formula__c , File_Name_Formula__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>File Location</label>
    <type>Text</type>
</CustomField>