force-app/main/default/objects/Commission__c/fields/File_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>File_Name_Formula__c</fullName>
    <label>File Name Formula</label>
    <length>255</length>
    <type>Text</type>
</CustomField>