force-app/main/default/objects/Commission__c/fields/Payment_Month__c.field-meta.xml
<CustomField>
    <fullName>Payment_Month__c</fullName>
    <formula>MONTH( Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>