force-app/main/default/objects/Commission__c/fields/Payment_Number__c.field-meta.xml
<CustomField>
    <fullName>Payment_Number__c</fullName>
    <label>Payment Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Payment 01</fullName>
            </value>
            <value>
                <fullName>Payment 02</fullName>
            </value>
            <value>
                <fullName>Payment 03</fullName>
            </value>
            <value>
                <fullName>Payment 04</fullName>
            </value>
            <value>
                <fullName>Payment 05</fullName>
            </value>
            <value>
                <fullName>Payment 06</fullName>
            </value>
            <value>
                <fullName>Payment 07</fullName>
            </value>
            <value>
                <fullName>Payment 08</fullName>
            </value>
            <value>
                <fullName>Payment 09</fullName>
            </value>
            <value>
                <fullName>Payment 10</fullName>
            </value>
            <value>
                <fullName>Payment 11</fullName>
            </value>
            <value>
                <fullName>Payment 12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>