force-app/main/default/objects/Commission__c/fields/Payment_Year__c.field-meta.xml
<CustomField>
    <fullName>Payment_Year__c</fullName>
    <formula>YEAR( Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>