force-app/main/default/objects/Commission__c/fields/RSF_for_Report__c.field-meta.xml
<CustomField>
    <fullName>RSF_for_Report__c</fullName>
    <formula>IF(TEXT(Payment_Number__c) = &apos;Payment 01&apos;, Opportunity__r.RSF__c , 0)</formula>
    <label>RSF for Report</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>