force-app/main/default/objects/Commission__c/recordTypes/Actual_Commission.recordType-meta.xml
<RecordType>
    <fullName>Actual_Commission</fullName>
    <active>false</active>
    <label>Actual Commission</label>
</RecordType>