force-app/main/default/objects/Commission__c/recordTypes/Estimated_Commission.recordType-meta.xml
<RecordType>
    <fullName>Estimated_Commission</fullName>
    <active>true</active>
    <label>Commissions</label>
</RecordType>